--- a/style.css
+++ b/style.css
@@ -205,9 +205,8 @@ margin:10px;
     margin:0 auto;
     height:350px;
     font-size:50px;
-    background: url("images/banner-girl.png") no-repeat center, url("images/flower-bkgd.jpg");
-    background-size: 10%, cover;
-    background-position: bottom;
+   background: url(images/banner-girl.png) no-repeat center 50px, url(images/flower-bkgd.jpg);
+    background-size: contain;
    
 }
 
@@ -258,6 +257,9 @@ margin:10px;
     color:#969696;
     padding-top:15px;
     line-height:2;
+    max-width: 570px;
+    margin:0 auto;
+    
 }
 
 .products ul{
@@ -270,10 +272,14 @@ margin:10px;
 
 }
 
-.top{
-    border-bottom:5px white solid;
-    
+.products li{
+    text-align:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 .first{
     width:50%;
     justify-content:flex-start;
@@ -384,22 +390,23 @@ margin:10px;
     padding-top:20px;
 }
 
-footer{
+.site-footer{
     background:#242424;
     display: flex;
-    justify-content: space-between;
+    flex-flow: column wrap;
     height:250px;
+    
 }
 
 
 .footer-info{
-    padding-top: 50px;
-    padding-left: 50px;
+    padding-left:60px;
 }
 
 
 .footer-contact{
     color:white;
+    padding-top:50px;
 }
 
 .address{
@@ -409,7 +416,7 @@ footer{
 
 .media{
     color:white;
-    padding-right: 80px;
+    padding-left:600px;
     padding-top: 50px;
     line-height:2;
 }
@@ -427,43 +434,156 @@ a:hover{
         min-width:100%;
     }
 
+    .heading{
+        font-size:40px;
+ 
+    }
+
     .site-header{
         flex-wrap: wrap;
-       
+        margin-bottom:60px;
 
     }
 
    .logo{
        order:1;
+       
+   }
+
+   .logo img{
+       max-width:170px;
+       padding-top:20px;
    }
 
    .main-navigation{
        order:3;
+       padding-top:15px;
+       min-width:100%;
+       font-size:20px;
+       border-top:solid grey 1px;
    }
 
    .cart{
        order:2;
-       padding-left:150px;
+       
    }
+
+   .cart-img{
+        height:80px;
+        max-width:1600px;
+        padding-left:170px;
+        padding-top:15px;
+        padding-bottom: 10px;
+   }
+
+   .banner{
+    background: url("images/banner-girl.png") no-repeat center 50px, url("images/flower-bkgd.jpg");
+       background-size: 30%, cover;
+   }
+
+   .styles{
+        min-width:100%;
+        font-size:40px;
+        padding-top:10px;
+        padding-bottom:5px;
+   }
+
+   .description{
+        display:block;
+        padding-left: 40px;
+        padding-right: 40px;
+        color:black;
+   }
+
+   .mobile-wrap{
+       display:block;
+   }
+
+   .about{
+       height:200px;
+   }
+
+   .products ul{
+       height:600px;
+       }
+
+    .products li{
+        border-top: 10px solid white;
+    }
 
    .mens, .womens{
        min-width:100%;
        text-align:center;
+       height:auto;
    }
 
    .trends, .glasses, .sales, .bags{
        min-width:50%;
-       text-aign:center;
+       text-align:center;
+       height:auto;
+
    }
+
    
+   
+   .newsletter{
+       background-size:auto;
+   }
+
    .footer-position{
-       margin: 0 auto;
+       min-width: 90%;
+       padding-left: 25px;
    }
 
-   .list{
-       display:inline;
-       min-width:100%;
+   .footer-info{
+       text-align:center;
+       padding-left:0;
    }
 
-  
+   .footer-contact{
+       padding-top: 30px;
+   }
+
+   .site-footer{
+       flex-flow:column nowrap; 
+   }
+
+   .media{
+       padding-left:0;
+       padding-top:20px;
+   }
+
+   .media-list{
+       display:flex;
+       padding-left: 150px;
+   }
+
+   .media-list a{
+       display:none;
+   }
+
+   .media-list i{
+       padding:10px;
+   }  
 }
+
+
+
+@media all and (max-width: 600px){
+
+
+
+    .footer-position{
+        min-width: 90%;
+        padding-left: 25px;
+    }
+
+    .newsletter{
+        background-size:auto;
+    }
+}
+
+
+
+
+
