--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -159,9 +160,9 @@ body{
 }
 
 .logo img{
-    padding-top: 30px;
-    padding-left:30px;
-    max-width:110px;
+    padding-top: 20px;
+    padding-left: 30px;
+    max-width: 190px;
    
 }
 
@@ -194,18 +195,18 @@ margin:10px;
 }
 
 .cart-img{
-    height:50px;
-    max-width:50px;
-    padding-left: 120px;
-    padding-top: 25px;   
+    height: 90px;
+    padding-bottom: 10px;
+    padding-left: 160px;
+    padding-top: 20px;
 }
 
 
 .banner{
     margin:0 auto;
-    height:350px;
+    height:500px;
     font-size:50px;
-   background: url(images/banner-girl.png) no-repeat center 50px, url(images/flower-bkgd.jpg);
+    background: url(images/banner-girl.png) no-repeat center 75px, url(images/flower-bkgd.jpg);
     background-size: contain;
    
 }
@@ -214,30 +215,30 @@ margin:10px;
 .banner-text{
     color: white;
     margin:0 auto;
-    padding-top:130px;
+    padding-top:200px;
 }
 
 
 
 .heading{
     font-family:'Playfair Display';
-    font-size:25px;
+    font-size:40px;
 }
 
 .collection{
-    font-size:16px;
+    font-size:20px;
     padding-bottom:20px;
     
 }
 
 .season{
-    font-size:35px;
+    font-size:55px;
    
 }
 
 .about{
     height:100px;
-    padding-top:40px;
+    padding-top:60px;
     padding-bottom:30px;
 }
 
@@ -254,11 +255,13 @@ margin:10px;
 }
 
 .description{
-    color:#969696;
-    padding-top:15px;
-    line-height:2;
-    max-width: 570px;
-    margin:0 auto;
+        
+        padding-top: 25px;
+        line-height: 2;
+        max-width: 595px;
+        margin: 0 auto;
+        font-weight: 200;
+        font-size: 18px;
     
 }
 
@@ -268,7 +271,8 @@ margin:10px;
     font-size:25px;
     display:flex;
     flex-wrap:wrap;
-    height:350px;
+    height:700px;
+    padding-top: 150px;
 
 }
 
@@ -295,35 +299,37 @@ margin:10px;
 .mens{
     background: url(images/mens-category.jpg) no-repeat center;
     background-size:100% 100%; 
-    /* padding-right:5px;
-    padding-bottom:5px; */
+    border-right: white solid 7px;
+    border-bottom: white solid 7px;
 }
 
 .trends{
     background: url(images/trends-category.jpg);
     background-size:100% 100%;
     max-width:25%;
-    /* padding-right:5px;
-    padding-bottom:5px; */
+    border-right: white solid 7px;
+    border-bottom: white solid 7px;
 }
 
 .glasses{
     background: url(images/glasses-category.jpg);
     background-size:100% 100%;
     max-width:25%;
-    /* padding-bottom:5px; */
+    border-bottom: white solid 7px;
 }
 
 .sales{
     background: url(images/sale-category.jpg);
     background-size:100% 100%;
     max-width:25%;
+    border-right: white solid 7px;
 }
 
 .bags{
     background: url(images/bags-category.jpg);
     background-size:100% 100%;
     max-width:25%;
+    border-right: white solid 7px;
 }
 
 .womens{
@@ -333,11 +339,12 @@ margin:10px;
 
 .featured{
     margin:40px;
+    height:500px;
 }
 
 .featured img{
-    height:150px;
-    width:150px;
+    height:200px;
+    width:200px;
     margin-bottom:20px;
 
 }
@@ -351,10 +358,14 @@ margin:10px;
 }
 
 .product-all{
-    border: dotted 1px;
+    /* border: dotted 1px; */
     padding-bottom: 40px;
     margin-top: 20px;
     padding-top: 40px;
+}
+
+.product-click{
+     border: dotted 1px;
 }
 
 .product p{
@@ -407,8 +418,7 @@ input[type="submit"] {
 
 
 .footer-position{
-    width: 60%;
-    padding-left: 20%;
+    
     padding-top:50px;
     text-align:center;
 }
@@ -419,6 +429,10 @@ input[type="submit"] {
 
 .subscription-info{
     line-height:2;
+
+    
+    padding-left: 325px;
+    padding-right: 325px;
 }
 
 .sign-up-form{
@@ -465,20 +479,82 @@ a:hover{
 
 @media all and (max-width: 600px){
 
+    .heading {
+        font-size:40px;
+    }
+
+
+    .site-header{
+        height:80px;
+    }
+
     .logo img{
-        padding-left:20px;
-        max-width:100px;
+        max-width: 130px;
+        padding-left: 10px;
+        padding-top: 20px;
+    }
+
+    .main-navigation{
+            flex: 0 1 60%;
+            padding-top: 35px;
+            font-size: 14px;
+        
     }
 
     .cart-img{
-        padding-left: 30px;
+        padding-left: 45px;
+        height:80px;
+      
     }
+
+    .about{
+        height:150px;
+        padding-top:70px;
+    }
+
+    .description{
+        padding-top:30px;
+        color: black;
+        font-weight:100;
+        font-size:19px;
+    }
+
+    .season{
+        font-size:40px;
+    }
+
+    .collection{
+        font-size:20px;
+    }
+
     .media{
         padding-left: 110px;
     }
 
+    .product-all{
+        padding-bottom:55px;
+    }
+
     .product{
         width:50%;
+    }
+
+
+    .products ul{
+        height:500px;
+    }
+
+    .featured{
+        height:600px;
+        padding-top: 20px;
+    }
+
+    .subscription-info {
+        line-height: 2;
+        width: 92%;
+        font-weight: 300;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .footer-position{
@@ -511,7 +587,7 @@ a:hover{
 
     .site-header{
         flex-wrap: wrap;
-        margin-bottom:60px;
+        margin-bottom:40px;
 
     }
 
@@ -521,16 +597,17 @@ a:hover{
    }
 
    .logo img{
-       max-width:170px;
-       padding-top:20px;
+        max-width: 130px;
+        padding-top: 15px;
    }
 
    .main-navigation{
-       order:3;
-       padding-top:15px;
-       min-width:100%;
-       font-size:20px;
-       border-top:solid grey 1px;
+        order: 3;
+        padding-top: 15px;
+        min-width: 100%;
+        font-size: 14px;
+        border-top: solid grey 1px;
+        font-weight: 600;
    }
 
    .cart{
@@ -539,11 +616,12 @@ a:hover{
    }
 
    .cart-img{
-        height:80px;
-        max-width:1600px;
-        padding-left:170px;
-        padding-top:15px;
+        height: 75px;
+        max-width: 1600px;
+        padding-left: 290px;
+        padding-top: 15px;
         padding-bottom: 10px;
+    
    }
 
    .banner{
@@ -558,12 +636,17 @@ a:hover{
         padding-bottom:5px;
    }
 
-   .description{
-        display:block;
-        padding-left: 40px;
-        padding-right: 40px;
-        color:black;
+
+   .about{
+       padding-top:40px;
    }
+
+   .description {
+    display: block;
+    color: black;
+    font-size: 16px;
+    width: 450px;
+}
 
    .mobile-wrap{
        display:block;
@@ -574,25 +657,44 @@ a:hover{
    }
 
    .products ul{
-       height:600px;
+       height:1000px;
        }
 
-    .products li{
-        border-top: 10px solid white;
+    
+    .mens{
+        border-top:8px solid white;
+    }
+    
+    .womens{
+        border-top:8px solid white;
     }
 
    .mens, .womens{
        min-width:100%;
        text-align:center;
        height:auto;
+       border-right:none;
    }
 
    .trends, .glasses, .sales, .bags{
        min-width:50%;
        text-align:center;
        height:auto;
+       border-right:none;
 
    }
+
+   .sales{
+    border-right: 8px solid white;
+    }
+
+    .glasses{
+        border-bottom: 8px solid white;
+    }
+
+    .trends{
+        border-right:8px solid white;
+    }
 
    .product{
        width:100%;
@@ -619,7 +721,8 @@ a:hover{
    .site-footer{
        flex-flow:column nowrap; 
        padding-bottom: 40px;
-       padding-top: 40px;
+       font-size:14px;
+       font-weight:350;
    }
 
    .media{
@@ -629,7 +732,7 @@ a:hover{
 
    .media-list{
        display:flex;
-       padding-left: 150px;
+       justify-content: center;
    }
 
    .media-list a{
