--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ table {
 
 body{
     color:#2d2d2d;
-    max-width:1240px;
+    
     margin:0 auto;
     font-family: 'Raleway';
     font-size: 16px;
@@ -208,9 +208,9 @@ margin:15px;
 
 .banner{
     margin:0 auto;
-    height:500px;
+    height:650px;
     font-size:50px;
-    background: linear-gradient(180deg,rgba(0,0,0,.25) 0,rgba(0,0,0,.25)) ,url(images/banner-girl.png) no-repeat center 75px, url(images/flower-bkgd.jpg);
+    background: linear-gradient(180deg,rgba(0,0,0,.25) 0,rgba(0,0,0,.25)) ,url(images/banner-girl.png) no-repeat center 125px, url(images/flower-bkgd.jpg);
     background-size: contain;
     text-shadow: 2px 2px 4px hsla(0,0%,39%,.8);
    
@@ -220,7 +220,7 @@ margin:15px;
 .banner-text{
     color: white;
     margin:0 auto;
-    padding-top:200px;
+    padding-top:300px;
 }
 
 
@@ -546,15 +546,15 @@ a:hover{
 
     .banner{
         margin: 0 auto;
-        height: 380px;
+        height: 450px;
         font-size: 50px;
-        background: linear-gradient(180deg,rgba(0,0,0,.25) 0,rgba(0,0,0,.25)), url(images/banner-girl.png) no-repeat center 25px, url(images/flower-bkgd.jpg);
-        background-size: contain;
+        background: linear-gradient(180deg,rgba(0,0,0,.25) 0,rgba(0,0,0,.25)), url(images/banner-girl.png) no-repeat center 110px, url(images/flower-bkgd.jpg) bottom;
+        background-size: contain, 25%;
 
     }
 
     .banner-text{
-        padding-top:150px;
+        padding-top:215px;
     }
 
     .about{
@@ -643,7 +643,7 @@ a:hover{
         display: flex;
         justify-content: space-around;
         height:100px;
-        position:relative;
+        
 
     }
 
@@ -668,6 +668,8 @@ a:hover{
         font-size: 14px;
         border-top: solid grey 1px;
         font-weight: 600;
+        background-color:white;
+        padding-bottom:10px;
    }
 
    .cart{
@@ -685,12 +687,12 @@ a:hover{
    }
 
    .banner{
-    background: linear-gradient(180deg,rgba(0,0,0,.25) 0,rgba(0,0,0,.25)), url("images/banner-girl.png") no-repeat center 55px, url("images/flower-bkgd.jpg");
+    background: linear-gradient(180deg,rgba(0,0,0,.25) 0,rgba(0,0,0,.25)), url("images/banner-girl.png") no-repeat center 135px, url("images/flower-bkgd.jpg");
     background-size: cover,150px 370px,cover;;
    }
 
    .banner-text{
-       padding-top:150px;
+       padding-top:230px;
    }
 
    .styles{
