--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ margin:15px;
     display:none;
 }
 
-#name{
+.title{
     font-size:12px;
 }
 
@@ -503,6 +503,28 @@ input[type="submit"] {
 a:hover{
     color:#fefec8;
 }
+
+.screen-reader-text {
+    clip: rect(1px, 1px, 1px, 1px);
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+ }
+
+ .screen-reader-text:focus {
+    clip: auto !important;
+    display: block;
+    height: auto;
+    left: 5px;
+    top: 5px;
+    width: auto;
+    z-index: 100000; /* above all content */
+ }
+
+ #main[tabindex="-1"]:focus {
+    outline: 0;
+ }
 
 /* media query for 600 */
 
